--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.3.6"
+    "vite": "^6.3.6",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
